Revoke changes