@@ -56,21 +56,16 @@ class LinuxFileSystem extends UnixFileSystem {
 
     // lazy initialization of the list of supported attribute views
     private static class SupportedFileFileAttributeViewsHolder {
-        static final Set<String> SUPPORTED_FILE_ATTRIBUTE_VIEWS =
-            supportedFileAttributeViews();
+        static final Set<String> supportedFileAttributeViews =
+                supportedFileAttributeViews();
         private static Set<String> supportedFileAttributeViews() {
             Set<String> result = new HashSet<>();
             result.addAll(standardFileAttributeViews());
             // additional Linux-specific views
             result.add("dos");
             result.add("user");
-            return Set.copyOf(result);
+            return Collections.unmodifiableSet(result);
         }
-    }
-
-    @Override
-    public Set<String> supportedFileAttributeViews() {
-        return SupportedFileFileAttributeViewsHolder.SUPPORTED_FILE_ATTRIBUTE_VIEWS;
     }
 
     @Override
